authentication, permissions and restrictions, deleting jobs, better CSS

--- a/excel_conv/templates/about.html
+++ b/excel_conv/templates/about.html
@@ -1,11 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}
-  <title>About</title>
-{% endblock %}
-
 {% block content %}
 <div class="container">
-  <p>This is the about page</p>
+  <p>This application takes an Excel spreadsheet received from the State of Florida and converts
+  </br>it into an Excel spreadsheet which can be used to create a MailMerge document for Doyaga Law Firm.
+  </p>
 </div>
 {% endblock %}
