updated help, contact and base pages and made the registration page inaccessible to unauthenticated users

--- a/excel_conv/templates/contact.html
+++ b/excel_conv/templates/contact.html
@@ -2,6 +2,16 @@
 
 {% block content %}
 <div class="container">
-  <p>This is the Contact Us Page</p>
+  <p>This application was developed by Forty Sheep Consulting Services.  We specialize in developing Django
+    applications for small businesses.  We also provide consulting services for businesses looking to
+    develop their own applications.  We can help you with your project from start to finish, or we can
+    help you with specific parts of your project.  We can also help you with your existing Django
+    application.</br></br>
+    We also develop API integrations using AWS Lambda and API Gateway.  We can help you integrate your
+    application with other services such as RingCentral, Google, and many others.</br>
+  </p>
+  <p>For more information, please visit <a href="http://www.fortysheep.com">www.fortysheep.com</a>.</br>
+  For support, please email <a href="mailto:support@fortysheep.com">our support team</a>.</p>
+  <p>For emergency support please call <a href="tel:+1-717-459-4489">1-717-459-4489</a>.</p>
 </div>
 {% endblock %}
